# l0vpre-website

./: .gitignore  Cargo.toml
.sqlx/: query-08fbd19e95b678469e5291784ee5e5154eb9dcae31c6270f1d90b62b67f8efcb.json  query-1c5d31eaef5f628c2f019f57cef90caf36d557e7ba35fb4549fc12bfd0a59bd9.json  query-2804a41db9ea4dde38c5dadb39989d4eb50ba7b9283a6080f7ad7d12a5bc61ef.json  query-496a97be8ac9390833490fd7635947fd9286d0989306aac91eefa6af61218d1d.json  query-732e4bbee42ecf58ff8a2fcdfb9f32fbae34163335a6f89a8663b49990044f37.json  query-8a1bde0e7c09b79de9c28bf3ac5f14ffb751a3dc7c71aac222b21c2df15320a9.json  query-d499ff8bf2f3ab50e3bc4ce74496916be63400525ad31982f181cecdd617b59a.json  query-e02f8caee69c1c0b25958e31e33b37f39c9312b5e6d7fe3180e2f378a77c3fdc.json
migrations/: 20241103191006_initial_create.sql
src/: app.rs  db.rs  main.rs  model.rs  routes.rs  schemas.rs  settings.rs  templates.rs
static/scripts/: animation.js
static/styles/: animation.js  base.css  oc.css  portfolio.css
templates/: base.html  commissions.html  commissions_new.html  index.html  not_found.html  oc.html  portfolio.html
