[package]
name = "l0vpre-website"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.7"
futures = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
